# Python-Msgraph-Toolkit

./: .gitignore  LICENSE  README.md  config.yaml  msgraph_api.py  notes.txt  project_diary  project_notes.txt  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
examples/: initialise_example.py  outlook_examples.py  sharepoint_examples.py  teams_examples.py  user_examples.py
src/msgraph_api/: client.py  exceptions.py
src/msgraph_api/services/: client.py  msgraph_api.py  outlook.py  sharepoint.py  teams.py
src/msgraph_api/services/outlook/: calendar.py  emails.py  outlook_service.py
src/msgraph_api/services/sharepoint/: drives.py  files.py  sharepoint_service.py  sites.py  sites_service.py
src/msgraph_api/services/teams/: chat.py  teams_service.py
src/msgraph_api/services/users/: user.py  users.py  users_service.py
src/msgraph_api/utils/: auth.py  pattern_id.py
src/python_msgraph_toolkit/: __init__.py  client.py
src/python_msgraph_toolkit/services/: exceptions.py
src/python_msgraph_toolkit/services/outlook/: calendar.py  (+2 more)
src/python_msgraph_toolkit/utils/: auth.py
tests/: examples.py  outlookExamples.py  pytest.ini  sharepoint.py  sharepointExamples.py  test_outlook.py  test_sharepoint.py  test_teams.py  test_users.py
tests/integration/: test_outlook.py  test_sharepoint.py  test_teams.py  test_users.py
tests/unit/: test_outlook.py  test_sharepoint.py  test_teams.py  test_users.py
tests/unit1/: conftest.py  test_calendar.py  test_chat.py  test_client.py  test_drives.py  test_emails.py  test_files.py  test_sites.py  test_users.py
(+8 files in other folders)
