[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-msgraph-toolkit"
version = "1.0.0"
description = "Developer-friendly Python client for Microsoft Graph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
"msgraph-sdk>=1.33.0",
"msgraph-core>=1.3.4",
"azure-identity>=1.23.0",
"python-dotenv>=1.0.1",
"requests>=2.32.3"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]